--- a/sample/src/main/webapp/views/errors/400.html
+++ b/sample/src/main/webapp/views/errors/400.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>400 BAD_REQUEST</title>
+    <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
+    <meta HTTP-EQUIV="Cache-Control" CONTENT="no-store">
+    <meta HTTP-EQUIV="expires" CONTENT="0">
 </head>
 <body>
     <p>用户名或密码错误</p>
