--- a/sample/src/main/webapp/views/login.html
+++ b/sample/src/main/webapp/views/login.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
+    <meta HTTP-EQUIV="Cache-Control" CONTENT="no-store">
+    <meta HTTP-EQUIV="expires" CONTENT="0">
 </head>
 	<body>
 		<form method="post" action="http://localhost:8080/login">
