模板引擎现支持多级EL表达式

--- a/sample/src/main/webapp/views/logout.html
+++ b/sample/src/main/webapp/views/logout.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     Logout
+    <form method="post" action="http://localhost:8080/logout">
+		<input type="submit" value="注销"/>
+    </form>
 </body>
 </html>
