--- a/sample/src/main/webapp/views/user.html
+++ b/sample/src/main/webapp/views/user.html
@@ -16,9 +16,9 @@
             <td>年龄</td>
         </tr>
         <tr>
-            <td>${requestScope.username}</td>
-            <td>${requestScope.realName}</td>
-            <td>${requestScope.age}</td>
+            <td>${requestScope.user.username}</td>
+            <td>${requestScope.user.realName}</td>
+            <td>${requestScope.user.age}</td>
         </tr>
     </table>
     <br>
